--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tanim Web Developer</title>
+    <title>Tanim Miar</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -17,23 +17,23 @@
             <h1>Welcome to</h1>
             <h1><span class="orange-highlight">Tanim</span> Website</h1>
             <h3>World class professional web developer</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur atque, consectetur ut maxime officiis harum obcaecati suscipit soluta, molestiae beatae sunt, error dicta maiores voluptate fugit ipsum distinctio. In, sequi.</p>
-            <a class="link-button" href="https://www.tanimmia.com/" target="_blank">HIRE ME</a>
+            <p>Greetings! I'm TANIM MIA, a seasoned web developer with a passion for crafting captivating online experiences. With 7 years of expertise, I specialize in turning your visions into functional, visually appealing, and user-centric websites and applications.</p>
+            <a class="link-button" href="https://www.freelancer.com/u/sttamim?sb=t" target="_blank">HIRE ME</a>
         </div>
         <div class="half-width">
-            <img src="imges/profile1.png" alt="">
+            <img src="imges/ppp.png" alt="">
         </div>
     </section>
 
 
     <section class="dream-area">
         <div class="half-width">
-            <img src=".//imges/profile2.png" alt="">
+            <img src=".//imges/ppp1.png" alt="">
         </div>
         <div class="half-width">
             <h2>Big Dream</h2>
-            <h3>Become world no. 1 Developer</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio aspernatur accusamus, dicta cupiditate reiciendis consequuntur laborum repellendus nihil et. Minus non nam assumenda et corporis sequi culpa iure, pariatur sapiente.</p>
+            <h3>Become a good Developer</h3>
+            <p>I have a good passion on web development & I always try to make every project best. By the good service I want to happy people & I want to serve around the world.</p>
             <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
         </div>
     </section>
@@ -42,13 +42,13 @@
         <h2>Experiences</h2>
         <div id="full-stack" class="half-width single-experience">
             <h2>Full Stack Web Developer</h2>
-            <h3 class="orange-highlight">2021-Present | Poro Level Web Developer</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi omnis placeat at nihil possimus eligendi laudantium, sed velit maxime eveniet officiis corporis sequi exercitationem iure temporibus odit. Ut, id tempore.</p>
+            <h3 class="orange-highlight">2021-Present | Senior web developer</h3>
+            <p>I have been working as a senior web developer in a private software compnay in Bangladesh.</p>
         </div>
         <div id="baby-web" class="half-width single-experience">
-            <h2>Full Stack Web Developer</h2>
-            <h3 class="orange-highlight">2021-Present | Poro Level Web Developer</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi omnis placeat at nihil possimus eligendi laudantium, sed velit maxime eveniet officiis corporis sequi exercitationem iure temporibus odit. Ut, id tempore.</p>
+            <h2>Front End Web Developer</h2>
+            <h3 class="orange-highlight">2017-2020| Junior web developer</h3>
+            <p>I had been working as a Junior web developer in a private software company in Bangladesh.</p>
         </div>
     </section>
     <footer>
